app/assets/stylesheets/components/_header3.scss
.header3 {
  width: 100%;
  height: 112px;
  display: flex;
  align-items: center;
  // justify-content: space-between;
  background-image: asset-url('banner_light_gray.png');
  background-size: cover;
  background-position: center;
  color: $blue;
  margin-bottom: 5px;
  h3 {
    font-size: 26px;
    margin: 0 5vw;
    overflow: hidden;
    text-overflow: ellipsis;
    // white-space: nowrap;
    a {
      color: $blue !important;
      margin: 0 5vw;
    }
  }
  #titles {
    flex-grow: 1;
    margin-top: 5vw;
  }
  #subtitle {
    margin-left: 5vw;
    margin-right: 5vw;
    overflow: hidden;
    text-overflow: ellipsis;
  }
}
h3.uppercase {
  text-transform: uppercase;
}

